// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Organisms/Markup Default 1`] = `
<div
  class="rpl-markup tide-wysiwyg app-wysiwyg"
>
  <div
    class="rpl-markup__inner"
  >
    <h2>
      Embedded document
    </h2>

    <article
      class="embedded-entity embedded-entity--media embedded-entity--media--document"
    >
      <article
        class="media media--type-document media--view-mode-embedded"
      >
        <div
          class="field field--name-field-media-file field--type-file field--label-hidden field__item"
        >
          <span
            class="file file--mime-application-vnd-openxmlformats-officedocument-wordprocessingml-document file--x-office-document"
          >
            <a
              aria-label=" Detailed Guide on the mandatory IR management criteria  File type: Word. Size: 75.22 KB."
              class="x-office-document tide-external-link"
              href="https://nginx-php-content-vic-develop.lagoon.vicsdp.amazee.io/sites/default/files/2018-10/Detailed%20Guide%20on%20the%20mandatory%20IR%20management%20criteria.docx"
              target="_blank"
            >
              <span
                class="file--title"
              >

                    Detailed Guide on the mandatory IR management criteria
              </span>
              <span
                class="file--type"
              >
                Word
              </span>
              <span
                class="file--size"
              >
                75.22 KB
              </span>
            </a>
          </span>
        </div>
      </article>
    </article>

    <h2>
      Link
    </h2>

    <p>

          A paragraph of
      <strong>
        text
      </strong>
       with a

      <a
        href="https://vic.gov.au"
      >
        link
      </a>
      .

    </p>

    <h2>
      Button
    </h2>

    <a
      class="button"
      href="http://www.google.com"
    >
      go to google
    </a>

    <h2>
      Quotation
    </h2>

    <blockquote
      class="quotation"
    >
      <p>

            Berios sim destrum facientota nis ex eost aut prae vendis explam aliquis
            dolorpo rrorem reptaep elenis net.

      </p>

      <footer>
        <cite>
          <span
            class="quotation__author"
          >
            Her Excellency the Honourable Linda Dessau AC
          </span>
          <br />

          <span
            class="quotation__author-title"
          >
            Governor of Victoria
          </span>
        </cite>
      </footer>
    </blockquote>

    <h2>
      Image
    </h2>

    <figure
      class="caption caption-article embedded-entity embedded-entity--media embedded-entity--media--image"
      role="group"
    >
      <article>
        <article
          class="media media--type-image media--view-mode-embedded"
        >
          <div
            class="field field--name-field-media-image field--type-image field--label-hidden field__item"
          >
            <img
              alt=" Judy Tegart-Dalton AM - 2019 Victorian Honour Roll of Women inductee"
              height="150"
              src="https://develop.content.vic.gov.au/sites/default/files/2019-03/womens-honour-roll-2019-Judy-Tegart-Dalton.png"
              title=" Judy Tegart-Dalton AM - 2019 Victorian Honour Roll of Women inductee"
              width="150"
            />
          </div>
        </article>
      </article>

      <figcaption>
        caption
      </figcaption>
    </figure>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/Markup Markup/Button 1`] = `
<div
  class="rpl-markup tide-wysiwyg app-wysiwyg"
>
  <div
    class="rpl-markup__inner"
  >
    <a
      class="rpl-link rpl-button rpl-button--primary"
      data-print-url="http://www.google.com"
      href="http://www.google.com"
    >
      <span
        class="rpl-link__inner"
      >
        go to google
      </span>
    </a>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/Markup Markup/Embedded document 1`] = `
<div
  class="rpl-markup tide-wysiwyg app-wysiwyg"
>
  <div
    class="rpl-markup__inner"
  >
    <figure
      class="rpl-document-link"
    >
      <a
        aria-label="
                  Detailed Guide on the mandatory IR management criteria  File type: docx. Size: 75.22 KB"
        class="rpl-document-link__link"
        download=""
        href="/sites/default/files/2018-10/Detailed%20Guide%20on%20the%20mandatory%20IR%20management%20criteria.docx"
      >
        <!---->

        <div
          class="rpl-document-link__info"
        >
          <span
            class="rpl-document-link__title"
          >

                  Detailed Guide on the mandatory IR management criteria
          </span>

          <div
            class="rpl-document-link__meta"
          >
            <span
              class="rpl-document-link__type"
            >
              docx
            </span>

            <span
              class="rpl-document-link__size rpl-document-link__size--seperator"
            >
              75.22 KB
            </span>
          </div>
        </div>
      </a>

      <!---->
    </figure>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/Markup Markup/Embedded video 1`] = `
<div
  class="rpl-markup tide-wysiwyg app-wysiwyg"
>
  <div
    class="rpl-markup__inner"
  >
    <div
      class="rpl-embedded-video rpl-markup__embedded-video"
    >
      <div
        class="rpl-embedded-video-iframe-container"
      >
        <iframe
          allowfullscreen="allowfullscreen"
          class="rpl-embedded-video-frame"
          height="480"
          src="https://www.youtube.com/embed/bSlnfyGTiss?autoplay=0&start=0&rel=0"
          width="854"
        />
      </div>

      <div
        class="rpl-embed-video__link"
      >
        <!---->

        <a
          class="rpl-link rpl-text-link"
          data-print-url="/media/1665"
          href="/media/1665"
        >
          <span
            class="rpl-link__inner"
          >
            <span
              class="rpl-text-label"
            >
              <span>
                View transcript
              </span>
            </span>
          </span>
        </a>
      </div>

      <div
        class="rpl-embed-video__transcript"
      >
        This is a caption
      </div>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/Markup Markup/Iframe 1`] = `
<div
  class="rpl-markup tide-wysiwyg app-wysiwyg"
>
  <div
    class="rpl-markup__inner"
  >
    <div
      class="rpl-markup__iframe-container"
    >
      <iframe
        frameborder="0"
        height="200"
        scrolling="no"
        src="https://mazzanet.net.au/cfa/?magickey=cfamonitor&reg=13"
        width="80"
      />
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/Markup Markup/Image 1`] = `
<div
  class="rpl-markup tide-wysiwyg app-wysiwyg"
>
  <div
    class="rpl-markup__inner"
  >
    <figure
      class="caption caption-article embedded-entity embedded-entity--media embedded-entity--media--image"
      role="group"
    >
      <article>
        <article
          class="media media--type-image media--view-mode-embedded"
        >
          <div
            class="field field--name-field-media-image field--type-image field--label-hidden field__item"
          >
            <img
              alt=" Judy Tegart-Dalton AM - 2019 Victorian Honour Roll of Women inductee"
              height="150"
              src="https://develop.content.vic.gov.au/sites/default/files/2019-03/womens-honour-roll-2019-Judy-Tegart-Dalton.png"
              title=" Judy Tegart-Dalton AM - 2019 Victorian Honour Roll of Women inductee"
              width="150"
            />
          </div>
        </article>
      </article>

      <figcaption>
        caption
      </figcaption>
    </figure>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/Markup Markup/Link 1`] = `
<div
  class="rpl-markup tide-wysiwyg app-wysiwyg"
>
  <div
    class="rpl-markup__inner"
  >
    <p>

            A paragraph of
      <strong>
        text
      </strong>
       with a

      <a
        class="rpl-link rpl-text-link"
        data-print-url="#"
        href="#"
      >
        <span
          class="rpl-link__inner"
        >
          <span
            class="rpl-text-label"
          >
            <span>
              relative link
            </span>
          </span>
        </span>
      </a>
       and

      <a
        class="rpl-link rpl-text-link"
        data-print-url="https://vic.gov.au"
        href="https://vic.gov.au"
      >
        <span
          class="rpl-link__inner"
        >
          <span
            class="rpl-text-label"
          >
            <span>
              <span>
                external
              </span>

              <span
                class="rpl-text-icon__group"
              >
                 link
                <!---->
              </span>
            </span>
          </span>
        </span>
      </a>
      .

    </p>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/Markup Markup/Quotation 1`] = `
<div
  class="rpl-markup tide-wysiwyg app-wysiwyg"
>
  <div
    class="rpl-markup__inner"
  >
    <blockquote
      class="quotation"
    >
      <p>

            Berios sim destrum facientota nis ex eost aut prae vendis explam aliquis
            dolorpo rrorem reptaep elenis net.

      </p>

      <footer>
        <cite>
          <span
            class="quotation__author"
          >
            Her Excellency the Honourable Linda Dessau AC
          </span>
          <br />

          <span
            class="quotation__author-title"
          >
            Governor of Victoria
          </span>
        </cite>
      </footer>
    </blockquote>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/Markup Markup/Tables 1`] = `
<div
  class="rpl-markup tide-wysiwyg app-wysiwyg"
>
  <div
    class="rpl-markup__inner"
  >
    <div
      class="rpl-markup__table"
    >
      <div
        class="rpl-markup__table"
      >
        <table>
          <caption>
            This is the table caption
          </caption>

          <thead>
            <tr>
              <th>
                Column 1
              </th>

              <th>
                Column 2
              </th>

              <th>
                Column 3 has quite a long heading
              </th>

              <th>
                Column 4
                <br />

          $000
              </th>
            </tr>
          </thead>

          <tbody>
            <tr>
              <td>
                Row 1 content
              </td>

              <td>
                row 1 content
              </td>

              <td>
                <p>
                  asymmetrical beard. Waistcoat photo booth synth drinking vinegar gastropub. Tilde pork belly gastropub, tacos
                  heirloom cold-pressed trust fund cred iPhone listicle succulents pok pok twee. Hell of vinyl tofu portland.
                  Sustainable woke pour-over man braid lyft lumbersexual crucifix iPhone, franzen subway tile four dollar toast
                  hoodie artisan. Retro hoodie occupy waistcoat narwhal. Succulents portland squid narwhal small batch
                </p>

                <p>
                  asymmetrical beard. Waistcoat photo booth synth drinking vinegar gastropub. Tilde pork belly gastropub, tacos
                  heirloom cold-pressed trust fund cred iPhone listicle succulents pok pok twee. Hell of vinyl tofu portland.
                  Sustainable woke pour-over man braid lyft lumbersexual crucifix iPhone, franzen subway tile four dollar toast
                  hoodie artisan. Retro hoodie occupy waistcoat narwhal. Succulents portland squid narwhal small batch.
                </p>

                <ul>
                  <li>
                    sometimes tables have lists
                  </li>

                  <li>
                    sometimes tables have lists
                  </li>

                  <li>
                    sometimes tables have lists
                  </li>
                </ul>
              </td>

              <td>
                1,234,567
              </td>
            </tr>

            <tr>
              <td>
                Row 2 content
              </td>

              <td>
                row 2 content
              </td>

              <td>
                <p>
                  asymmetrical beard. Waistcoat photo booth synth drinking vinegar gastropub. Tilde pork belly gastropub, tacos
                  heirloom cold-pressed trust fund cred iPhone listicle succulents pok pok twee. Hell of vinyl tofu portland.
                  Sustainable woke pour-over man braid lyft lumbersexual crucifix iPhone, franzen subway tile four dollar toast
                  hoodie artisan. Retro hoodie occupy waistcoat narwhal. Succulents portland squid narwhal small batch.
                </p>
              </td>

              <td>
                384
              </td>
            </tr>

            <tr>
              <td>
                Row 3 content
              </td>

              <td>
                row 3 content
              </td>

              <td>
                <p>
                  asymmetrical beard. Waistcoat photo booth synth drinking vinegar gastropub. Tilde pork belly gastropub, tacos
                  heirloom cold-pressed trust fund cred iPhone listicle succulents pok pok twee. Hell of vinyl tofu portland.
                  Sustainable woke pour-over man braid lyft lumbersexual crucifix iPhone, franzen subway tile four dollar toast
                  hoodie artisan. Retro hoodie occupy waistcoat narwhal. Succulents portland squid narwhal small batch.
                </p>
              </td>

              <td>
                568,658
              </td>
            </tr>

            <tr>
              <td>
                x
              </td>

              <td>
                y
              </td>

              <td>
                z
              </td>

              <td>
                zz
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
